--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -21,7 +21,7 @@ tags:
 
 {% block content %}
     <!-- ====== Hero Start ====== -->
-    <!-- <section class="ud-hero" id="home">
+    <section class="ud-hero" id="home">
         <div class="container">
           <div class="row">
             <div class="col-lg-12">
@@ -37,17 +37,17 @@ tags:
             </div>
           </div>
         </div>
-    </section> -->
+    </section>
     <!-- ====== Hero End ====== -->
 
     <div class="container">
         <div class="row">
             <div class="col-lg-3">
                 <div class="sidebar">
-                    <div style="padding-top: 60px;">
+                    <!-- <div style="padding-top: 60px;">
                         <h5>Municipio: <br><span>{{ municipio.municipio }}</span></h5>
                         <h5>Departamento: <br><span>{{ municipio.departamento }}</span></h5>
-                    </div>
+                    </div> -->
                     <div style="padding-top: 20px;">
                         <h3>Selección de Tema</h3>
                     </div>
