--- a/assets/css/ud-styles.css
+++ b/assets/css/ud-styles.css
@@ -507,7 +507,7 @@ p {
 /* ===== Hero CSS ===== */
 .ud-hero {
   background: var(--primary-color);
-  padding-top: 180px;
+  padding: 20px 0 ;
 }
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -2880,3 +2880,53 @@ hr{
   display: block;
 }
 
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgb(0,0,0);
+  background-color: rgba(0,0,0,0.4);
+}
+
+.popup-content {
+  background-color: #fefefe;
+  margin: 15% auto;
+  padding: 20px;
+  border: 1px solid #888;
+  width: 40%;
+  height: 400px;
+}
+
+.close {
+  color: #aaa;
+  float: right;
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+.header-buttons{
+  background-color: white;
+  border-radius: 5px;
+  padding: 5px 10px;
+  transition: 0.5s all ease;
+}
+
+.header-buttons:hover{
+  opacity: 0.5;
+}
+
+.header-buttons i{
+  margin-right: 5px;
+}
