--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@ permalink: "index.html"
 {% extends "src/base.njk" %}
 
 {% block head %}
-<title>Interoperabilidad | Gobierno Digital</title>
+<title>Lab Municipal | Gobierno Digital</title>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
