--- a/src/base.njk
+++ b/src/base.njk
@@ -68,8 +68,9 @@
 
 							<ul class="menu-container" style="border:none!important">
 								<li class="menu-item "><a class="menu-link" href="/index.html"><div>Inicio</div></a></li>
-                <li class="menu-item "><a class="menu-link" href="/municipios/index.html"><div>Municipios</div></a></li>
-                <li class="menu-item "><a class="menu-link btn" style="padding: 5px 10px!important;" href="/contacto/index.html"><div>Contacto</div></a></li>
+								<li class="menu-item "><a class="menu-link" href="/municipios/index.html"><div>Municipios</div></a></li>
+								<li class="menu-item "><a class="menu-link" href="/mapa/index.html"><div>Mapa Municipal</div></a></li>
+								<li class="menu-item "><a class="menu-link btn" style="padding: 5px 10px!important;" href="/contacto/index.html"><div>Contacto</div></a></li>
 							</ul>
 
 						</nav><!-- #primary-menu end -->
