--- a/src/mapa_municipal.njk
+++ b/src/mapa_municipal.njk
@@ -5,9 +5,8 @@ permalink: "mapa/index.html"
 {% extends "src/base.njk" %}
 
 {% block head %}
-<title>Mapa Municipal | Gobierno Digital</title>
+<title>Mapa Municipal | Red Ciudadana</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 {% endblock %}
 
 {% block content %}
