--- a/src/base.njk
+++ b/src/base.njk
@@ -20,6 +20,8 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" /> -->
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
+	<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
     {% block head %}
     {% endblock %}
 
@@ -27,7 +29,7 @@
 
 <body class="stretched search-overlay">
 	<!-- Preloader Start -->
-	<!-- <div id="preloader-active">
+	<div id="preloader-active">
 		<div class="preloader d-flex align-items-center justify-content-center">
 			<div class="preloader-inner position-relative">
 				<div class="text-center">
@@ -35,7 +37,7 @@
 				</div>
 			</div>
 		</div>
-	</div> -->
+	</div>
 	<!-- Document Wrapper
 	============================================= -->
 	<div id="wrapper" class="clearfix">
@@ -173,12 +175,14 @@
 			("use strict");
 			// Page loading
 			$(window).on("load", function () {
+				console.log("Window loaded");
 				$("#preloader-active").delay(450).fadeOut("slow");
 				$("body").delay(450).css({
 					overflow: "visible"
 				});
 				$("#onloadModal").modal("show");
 			});
+
 		
 		})(jQuery);
 	</script>
