--- a/src/index.njk
+++ b/src/index.njk
@@ -5,9 +5,8 @@ permalink: "index.html"
 {% extends "src/base.njk" %}
 
 {% block head %}
-<title>Lab Municipal | Gobierno Digital</title>
+<title>Lab Municipal | Red Ciudadana</title>
 
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 {% endblock %}
@@ -79,7 +78,7 @@ permalink: "index.html"
 
         <section class="px-2" style="background-color: #fff;">
             <div class="container clearfix ">
-                <div class="row py-6 align-items-center">
+                <div class="row align-items-center">
                     <div class="col-lg-6 my-4">
                         <h1 class="text-titles">¿Qué es el Laboratorio Municipal?</h1>
                         <p class="mt-4">
@@ -106,16 +105,24 @@ permalink: "index.html"
         <section class="px-2 pt-5" style="background-color: #e9f0f8;">
             <div class="container clearfix ">
                 <div class="row pt-5 justify-content-center">
-                    <div class="col-lg-12">
+                    <div class="col-lg-12 my-4">
                         <div class="row">
-							{% for municipio in collections.municipio %}
-							<div class="col-lg-12 my-2">
-								<a href="{{municipio.url}}" class="categoria">
-									<div>{{municipio.data.municipio.departamento}}/{{municipio.data.municipio.municipio}}</div>
-								</a>
-							</div>
-							{% endfor %}
+							{% for municipio in collections.municipio | limit(8) %}
+                            <div class="col-lg-3 my-2 municipio-item">
+                                <a href="{{municipio.url}}">
+                                    <div class="municipio_box">
+                                        <img src="/assets/images/placeholder2.png">
+                                        <div class="text">
+                                            <h4>{{municipio.data.municipio.departamento}}, {{municipio.data.municipio.municipio}}</h4>
+                                        </div>
+                                    </div>
+                                </a>
+                            </div>
+                            {% endfor %}
                         </div>
+                    </div>
+                    <div class="col-lg-12 my-4 text-center">
+                        <a href="/municipios/index.html" class="btn">Ver más</a>
                     </div>
                 </div>
             </div>
