--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -82,7 +82,10 @@ tags:
             </div>
           
             <div class="col-lg-10">
-                <div class="row justify-content-end box_shadow_section_2" >
+                <div class="row align-items-center justify-content-end box_shadow_section_2" >
+                    <div class="col-lg-5">
+                        <a href="/municipios/index.html">Municipios</a> / <a href="#" style="pointer-events: none;">{{municipio.municipio}}</a>
+                    </div>
                     <div class="col-lg-7">
                         <div class="row justify-content-end">
                             <div class="col-lg-3 col-sm-4">
@@ -419,6 +422,7 @@ tags:
                             </div>
                         </div>
                     </section>
+                    
                 </div>
             </div>
         </div>
