--- a/src/mapa_municipal.njk
+++ b/src/mapa_municipal.njk
@@ -7,6 +7,8 @@ permalink: "mapa/index.html"
 {% block head %}
 <title>Mapa Municipal | Red Ciudadana</title>
 <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {% endblock %}
 
 {% block content %}
