--- a/src/municipios.njk
+++ b/src/municipios.njk
@@ -6,7 +6,8 @@ permalink: "municipios/index.html"
 
 {% block head %}
 <title>Lab Municipal | Municipios</title>
-<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 {% endblock %}
 
 {% block content %}
