--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -113,7 +113,7 @@ tags:
                                 <div class="col-lg-12">
                                     <div class="row ">
                                         <div class="col-lg-6">
-                                            <div id="map" style="width: 600px; height: 400px;"></div>
+                                            <div id="map" style="width: 100%; height: 400px;"></div>
                                         </div>
                                         <div class="col-lg-6 align-items-center d-flex">
                                             <p>
