--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -49,7 +49,14 @@ tags:
     <div id="guiaPopup" class="popup">
         <div class="popup-content">
             <span class="close" id="closeGuiaPopup">&times;</span>
-            <p>Este es el texto de la guia.</p>
+            <br>
+            <h4>Guía de Datos</h4>
+            <p>La Guía de Datos de MuniData está diseñada para ayudarte a interpretar y aprovechar al máximo la información disponible. Aquí encontrarás definiciones claras de cada indicador, explicaciones sobre su origen y metodología, así como consejos prácticos para su aplicación en la toma de decisiones y la formulación de políticas públicas. Navegar por los datos nunca ha sido tan intuitivo y accesible.</p>
+            <p>Debido a la limitada, retrasada o inexacta recolección de información, así como a una muestra limitada y potencialmente sesgada, los datos para este municipio pueden contener inexactitudes. Nuestro método de depuración corrige algunos errores e inconsistencias encontrados en los datos en bruto. Sin embargo, ten en cuenta que los datos mostrados para este municipio reflejan las mejores estimaciones disponibles, basadas en muestras grandes de establecimientos y fuentes oficiales, y requieren una consideración cuidadosa antes de ser utilizados.
+
+                Puedes encontrar más información sobre los datos de MuniData en la página de Preguntas Frecuentes (FAQ).
+                
+                Puedes ayudar a mejorar nuestros datos enviando sugerencias o informando errores <a href="#">aquí</a>.</p>
         </div>
     </div>
 
@@ -57,7 +64,10 @@ tags:
     <div id="metodologiaPopup" class="popup">
         <div class="popup-content">
             <span class="close" id="closeMetodologiaPopup">&times;</span>
-            <p>Este es el texto de la metodologia.</p>
+            <br>
+            <h4>Metodologia</h4>
+            <p>En MuniData, la calidad de los datos es nuestra prioridad. Por ello, hemos diseñado una metodología robusta para la recolección y procesamiento de la información. Utilizamos fuentes primarias de instituciones oficiales y complementamos con fuentes secundarias de investigaciones y reportes confiables. Todos los datos son cuidadosamente normalizados y verificados para asegurar su precisión y coherencia, permitiéndote confiar plenamente en la información que utilizas.</p>
+            <a class="btn" href="#">Descarga</a>
         </div>
     </div>
 
@@ -95,7 +105,7 @@ tags:
                                 <button id="expandButton" class="header-buttons"><i id="expandIcon" class="fa-solid fa-maximize"></i>Expandir</button>
                             </div>
                             <div class="col-lg-3 col-sm-4">
-                                <button id="guiaButton" class="header-buttons">Guía</button>
+                                <button id="guiaButton" class="header-buttons">Guía de Datos</button>
                             </div>
                             <div class="col-lg-3 col-sm-4">
                                 <button id="metodologiaButton" class="header-buttons">Metodología</button>
