--- a/src/index.njk
+++ b/src/index.njk
@@ -105,6 +105,10 @@ permalink: "index.html"
         <section class="px-2 pt-5" style="background-color: #e9f0f8;">
             <div class="container clearfix ">
                 <div class="row pt-5 justify-content-center">
+                    <div class="col-lg-12 text-center">
+                        <h1 class="text-titles">Explora los Detalles de Cada Municipio</h1>
+                        <p class="mt-4">Accede a un perfil completo de cada uno de los 340 municipios de Guatemala. En esta sección, encontrarás información esencial organizada en categorías clave como salud, educación, transparencia, pobreza, y más. </p>
+                    </div>
                     <div class="col-lg-12 my-4">
                         <div class="row">
 							{% for municipio in collections.municipio | limit(8) %}
