nuevo json conectado

--- a/src/municipio.njk
+++ b/src/municipio.njk
@@ -40,7 +40,8 @@ tags:
     <div id="sharePopup" class="popup">
         <div class="popup-content">
             <span class="close" id="closeSharePopup">&times;</span>
-            <p>Opciones para compartir</p>
+            <br>
+            <p>Difunde la información relevante con tus colegas, comunidad, o audiencia. Con MuniData, puedes compartir gráficos, mapas y perfiles municipales de manera fácil y rápida a través de redes sociales, enlaces directos, o descargas de datos. </p>
             <!-- Añade tus opciones para compartir aquí -->
         </div>
     </div>
@@ -127,7 +128,7 @@ tags:
                                         </div>
                                         <div class="col-lg-6 align-items-center d-flex">
                                             <p>
-                                                Lorem ipsum odor amet, consectetuer adipiscing elit. Hendrerit metus tortor semper lectus mus dignissim. Eu habitasse per nam senectus nisl libero mauris. Dapibus duis magna tempus tempus morbi; mollis risus quis senectus. Malesuada ligula egestas, potenti posuere nulla commodo. Malesuada feugiat enim vehicula et varius nostra vel fringilla volutpat. Curabitur curae dapibus facilisis ullamcorper et. Rutrum himenaeos ultrices dui aenean taciti nec metus viverra ac. Vitae tellus euismod conubia ullamcorper mi sagittis duis est nisl.
+                                                {{municipio.resumen.Resumen}}
                                             </p>
                                         </div>
                                         <div class="col-lg-4 my-4">
